--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "order-service",
   "version": "1.0.0",
-  "description": "",
+  "description": "Order Service adalah bagian dari E-Commerce yang merupakan starter project dari kelas Belajar Membangun Arsitektur Microservices",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -16,5 +16,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "nodemon": "^2.0.22"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jefriadisetiawan/a433-microservices.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jefriadisetiawan/a433-microservices/issues"
+  },
+  "homepage": "https://github.com/jefriadisetiawan/a433-microservices#readme"
 }
